# coverage-badge

./: .gitignore  .semantic-release.yaml  CHANGELOG.md  CLAUDE.md  README.md  action.yml  pyproject.toml  tasks.py
.github/workflows/: ci.yml  release.yml
adr/: 0001-linked-coverage-report-via-github-pages.md
scripts/: update_badge.py
tests/: test_update_badge.py
